force-app/main/default/objects/Revolution_Batch__mdt/Revolution_Batch__mdt.object-meta.xml
<CustomObject>
    <label>Revolution Batch</label>
    <pluralLabel>Revolution Batches</pluralLabel>
</CustomObject>