force-app/main/default/objects/Revolution_Batch__mdt/fields/Adhoc_Run_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Adhoc_Run_Allowed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Adhoc Run Allowed?</label>
    <type>Checkbox</type>
</CustomField>