force-app/main/default/objects/Revolution_Batch__mdt/fields/Alert_Needed__c.field-meta.xml
<CustomField>
    <fullName>Alert_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alert Needed?</label>
    <type>Checkbox</type>
</CustomField>