force-app/main/default/objects/Revolution_Batch__mdt/fields/IT_Dashboard_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>IT_Dashboard_Display_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Dashboard Display Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>