force-app/main/default/objects/Revolution_Batch__mdt/fields/IT_Dashboard_Label__c.field-meta.xml
<CustomField>
    <fullName>IT_Dashboard_Label__c</fullName>
    <label>Dashboard Label</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>