force-app/main/default/objects/Revolution_Batch__mdt/fields/Only_Adhoc_Run_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Only_Adhoc_Run_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only Adhoc Run Allowed?</label>
    <type>Checkbox</type>
</CustomField>