force-app/main/default/objects/Revolution_Batch__mdt/fields/Parent_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Class_Name__c</fullName>
    <defaultValue>&apos;NA&apos;</defaultValue>
    <label>Parent Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>