force-app/main/default/objects/Revolution_Batch__mdt/fields/Parent_Class_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Class_Type__c</fullName>
    <label>Parent Class Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Batchable</fullName>
                <default>true</default>
                <label>Batchable</label>
            </value>
            <value>
                <fullName>Queueable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>