force-app/main/default/objects/Revolution_Batch__mdt/fields/Related_MasterLabel__c.field-meta.xml
<CustomField>
    <fullName>Related_MasterLabel__c</fullName>
    <label>MasterLabel</label>
    <length>40</length>
    <type>Text</type>
</CustomField>