force-app/main/default/objects/Revolution_Batch__mdt/fields/Schedulable_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Schedulable_Class_Name__c</fullName>
    <label>Schedulable Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>