force-app/main/default/objects/Revolution_Batch__mdt/fields/Schedule_Expression__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Expression__c</fullName>
    <label>Schedule Expression</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>