force-app/main/default/objects/Revolution_Batch__mdt/listViews/Batches.listView-meta.xml
<ListView>
    <fullName>Batches</fullName>
    <columns>IT_Dashboard_Display_Order__c</columns>
    <columns>IT_Dashboard_Label__c</columns>
    <columns>Batch_Name__c</columns>
    <columns>Schedulable_Class_Name__c</columns>
    <columns>Parent_Class_Name__c</columns>
    <columns>Parent_Class_Type__c</columns>
    <columns>MasterLabel</columns>
    <columns>Related_MasterLabel__c</columns>
    <columns>Schedule_Expression__c</columns>
    <columns>Adhoc_Run_Allowed__c</columns>
    <columns>Alert_Needed__c</columns>
    <columns>Invisible_on_Dashboard__c</columns>
    <filterScope>Everything</filterScope>
    <label>Batches</label>
    <language>en_US</language>
</ListView>